Fixed App container bug with overflow-x scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,20 @@
   }
 }
 
+@media only screen and (max-width: 800px) {
+  .nav-container {
+      display: none !important;
+  }
+
+  .nav-mobile-container {
+    display: flex !important;
+  }
+}
+
+
 html {
   margin-right: calc(-1 * (100vw - 100%)); /* Prevents page from adjusting when scrollbar is present or not */
+  overflow-x: hidden;
 }
 
 * {
@@ -40,6 +52,16 @@ body {
   flex-direction: column;
   border-bottom: 2px solid rgba(211, 211, 211, .25);
   align-items: center;
+}
+
+.nav-mobile-container {
+  display: none;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 65px;
+  padding: 0 16px;
+  border-bottom: 1px solid rgb(235, 235, 235);
 }
 
 .main-content-container {
